[package]
name = "mmap-sync2"
version = "3.0.0"
edition = "2024"
authors = [
    "Alex Bocharov <bocharov.alexandr@gmail.com>",
    "Austin Hartzheim <ahartzheim@cloudflare.com>",
    "Rail Khusnutdinov <rail@33.run>",
]
description = "A Rust package allowing sharing of data between processes in a wait-free and zero-copy fashion from mapped memory."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cloudflare/mmap-sync"
keywords = ["memory-mapping", "synchronization", "interprocess", "wait-free", "zero-copy"]
categories = ["os", "filesystem", "concurrency", "data-structures", "memory-management"]

[dependencies]
memmap2 = "0.9"
rkyv = { version = "0.8", features = ["aligned"] }
thiserror = "2.0"
wyhash = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec", "criterion"] }
proptest = "1.0"
rand = "0.9"

[[bench]]
name = "synchronizer"
harness = false

[package.metadata.docs.rs]
all-features = true
